Fix breadcrumbs alignment

--- a/assets/css/components/_breadcrumbs.scss
+++ b/assets/css/components/_breadcrumbs.scss
@@ -24,6 +24,10 @@
   color: var(--breadcrumb-color);
   text-decoration: none;
 
+  .Breadcrumbs-item:first-of-type > & {
+    padding-left: 0;
+  }
+
   &.is-current,
   &:active,
   &:hover {
